# linux2mqtt

./: .gitignore  README.md  commands.py  host_sensors.py  linux2mqtt.conf.sample  linux2mqtt.service  main.py  mqttconsumer.py  pyproject.toml  settings.py
aux/: linux2mqtt.conf.sample
